--- a/files/en-us/web/html/element/frameset/index.html
+++ b/files/en-us/web/html/element/frameset/index.html
@@ -13,7 +13,7 @@ browser-compat: html.elements.frameset
 
 <p>The <strong><code>&lt;frameset&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element is used to contain {{HTMLElement("frame")}} elements.</p>
 
-<div class="note"><strong>Note:</strong> Because the use of frames is now discouraged in favor of using {{HTMLElement("iframe")}}, this element is not typically used by modern web sites.</div>
+<div class="note"><p><strong>Note:</strong> Because the use of frames is now discouraged in favor of using {{HTMLElement("iframe")}}, this element is not typically used by modern web sites.</p></div>
 
 <h2 id="Attributes">Attributes</h2>
 
