--- a/files/en-us/web/html/element/li/index.html
+++ b/files/en-us/web/html/element/li/index.html
@@ -67,7 +67,7 @@ browser-compat: html.elements.li
  </ul>
  This type overrides the one used by its parent {{HTMLElement("ol")}} element, if any.
 
- <div class="note"><strong>Note:</strong> This attribute has been deprecated; use the CSS {{cssxref("list-style-type")}} property instead.</div>
+ <div class="note"><p><strong>Note:</strong> This attribute has been deprecated; use the CSS {{cssxref("list-style-type")}} property instead.</p></div>
  </dd>
 </dl>
 
