--- a/files/en-us/web/html/element/meta/name/index.html
+++ b/files/en-us/web/html/element/meta/name/index.html
@@ -21,7 +21,7 @@ browser-compat: html.elements.meta.name
  <li>
   <p><code>application-name</code>: the name of the application running in the web page.</p>
 
-  <div class="note"><strong>Note:</strong>
+  <div class="note"><p><strong>Note:</strong></p>
 
   <ul>
    <li>Browsers may use this to identify the application. It is different from the {{HTMLElement("title")}} element, which usually contain the application name, but may also contain information like the document name or a status.</li>
