--- a/files/en-us/web/html/element/plaintext/index.html
+++ b/files/en-us/web/html/element/plaintext/index.html
@@ -15,7 +15,7 @@ browser-compat: html.elements.plaintext
 
 <p>The <strong><code>&lt;plaintext&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element renders everything following the start tag as raw text, ignoring any following HTML. There is no closing tag, since everything after it is considered raw text.</p>
 
-<div class="note"><strong>Note:</strong> Do not use this element.
+<div class="note"><p><strong>Note:</strong> Do not use this element.</p>
 
 <ul>
  <li><code>&lt;plaintext&gt;</code> is deprecated since HTML 2, and not all browsers implemented it. Browsers that did implement it didn't do so consistently.</li>
