--- a/files/en-us/web/html/element/td/index.html
+++ b/files/en-us/web/html/element/td/index.html
@@ -76,7 +76,7 @@ browser-compat: html.elements.td
  <dt>{{htmlattrdef("abbr")}} {{deprecated_inline}}</dt>
  <dd>
  <p>This attribute contains a short abbreviated description of the cell's content. Some user-agents, such as speech readers, may present this description before the content itself.</p>
- <div class="note"><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard. Alternatively, you can put the abbreviated description inside the cell and place the long content in the <strong>title</strong> attribute.</div>
+ <div class="note"><p><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard. Alternatively, you can put the abbreviated description inside the cell and place the long content in the <strong>title</strong> attribute.</p></div>
  </dd>
  <dt>{{htmlattrdef("align")}} {{deprecated_inline}}</dt>
  <dd>
@@ -91,7 +91,7 @@ browser-compat: html.elements.td
 
  <p>The default value when this attribute is not specified is <code>left</code>.</p>
 
- <div class="note"><strong>Note:</strong>
+ <div class="note"><p><strong>Note:</strong></p>
 
  <ul>
   <li>To achieve the same effect as the <code>left</code>, <code>center</code>, <code>right</code> or <code>justify</code> values, apply the CSS {{cssxref("text-align")}} property to the element.</li>
