--- a/files/en-us/web/html/element/xmp/index.html
+++ b/files/en-us/web/html/element/xmp/index.html
@@ -15,7 +15,7 @@ browser-compat: html.elements.xmp
 
 <p>The <strong><code>&lt;xmp&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element renders text between the start and end tags without interpreting the HTML in between and using a monospaced font. The HTML2 specification recommended that it should be rendered wide enough to allow 80 characters per line.</p>
 
-<div class="note"><strong>Note:</strong> Do not use this element.
+<div class="note"><p><strong>Note:</strong> Do not use this element.</p>
 
 <ul>
  <li>It has been deprecated since HTML3.2 and was not implemented in a consistent way. It was completely removed from the language in HTML5.</li>
