--- a/files/en-us/web/html/attributes/index.html
+++ b/files/en-us/web/html/attributes/index.html
@@ -96,7 +96,7 @@ tags:
    <td><code>background</code></td>
    <td>{{ HTMLElement("body") }}, {{ HTMLElement("table") }}, {{ HTMLElement("td") }}, {{ HTMLElement("th") }}</td>
    <td>Specifies the URL of an image file.
-    <div class="note"><strong>Note:</strong> Although browsers and email clients may still support this attribute, it is obsolete. Use CSS {{ Cssxref("background-image") }} instead.</div>
+    <div class="note"><p><strong>Note:</strong> Although browsers and email clients may still support this attribute, it is obsolete. Use CSS {{ Cssxref("background-image") }} instead.</p></div>
    </td>
   </tr>
   <tr>
@@ -456,7 +456,7 @@ tags:
    <td><code><a href="/en-US/docs/Web/HTML/Element/html#attr-manifest">manifest</a></code> {{deprecated_inline}}</td>
    <td>{{ HTMLElement("html") }}</td>
    <td>Specifies the URL of the document's cache manifest.
-    <div class="note"><strong>Note:</strong> This attribute is obsolete, use <a href="/en-US/docs/Web/Manifest"><code>&lt;link rel="manifest"&gt;</code></a> instead.</div>
+    <div class="note"><p><strong>Note:</strong> This attribute is obsolete, use <a href="/en-US/docs/Web/Manifest"><code>&lt;link rel="manifest"&gt;</code></a> instead.</p></div>
    </td>
   </tr>
   <tr>
