--- a/files/en-us/web/html/element/col/index.html
+++ b/files/en-us/web/html/element/col/index.html
@@ -109,7 +109,7 @@ browser-compat: html.elements.col
   <li>and <code>top</code>, which will put the text as close to the top of the cell as it is possible.</li>
  </ul>
 
- <div class="note"><strong>Note:</strong>
+ <div class="note"><p><strong>Note:</strong></p>
 
  <ul>
   <li>Do not try to set the {{cssxref("vertical-align")}} property on a selector giving a <code>&lt;col&gt;</code> element. Because {{HTMLElement("td")}} elements are not descendant of the <code>&lt;col&gt;</code> element, they won't inherit it.</li>
