--- a/files/en-us/web/html/element/tfoot/index.html
+++ b/files/en-us/web/html/element/tfoot/index.html
@@ -71,7 +71,7 @@ browser-compat: html.elements.tfoot
 
  <p>If this attribute is not set, the <code>left</code> value is assumed.</p>
 
- <div class="note"><strong>Note:</strong>
+ <div class="note"><p><strong>Note:</strong></p>
 
  <ul>
   <li>To achieve the same effect as the <code>left</code>, <code>center</code>, <code>right</code> or <code>justify</code> values, use the CSS {{cssxref("text-align")}} property on it.</li>
@@ -98,7 +98,7 @@ browser-compat: html.elements.tfoot
   <li>and <code>top</code>, which will put the text as close to the top of the cell as it is possible.</li>
  </ul>
 
- <div class="note"><strong>Note:</strong> Do not use this attribute as it is obsolete (and not supported) in the latest standard: instead set the CSS {{cssxref("vertical-align")}} property on it.</div>
+ <div class="note"><p><strong>Note:</strong> Do not use this attribute as it is obsolete (and not supported) in the latest standard: instead set the CSS {{cssxref("vertical-align")}} property on it.</p></div>
  </dd>
 </dl>
 
