--- a/files/en-us/web/html/element/th/index.html
+++ b/files/en-us/web/html/element/th/index.html
@@ -97,7 +97,7 @@ browser-compat: html.elements.th
 
  <p>The default value when this attribute is not specified is <code>left</code>.</p>
 
- <div class="note"><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard.
+ <div class="note"><p><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard.</p>
 
  <ul>
   <li>To achieve the same effect as the <code>left</code>, <code>center</code>, <code>right</code> or <code>justify</code> values, apply the CSS {{cssxref("text-align")}} property to the element.</li>
@@ -107,7 +107,7 @@ browser-compat: html.elements.th
  </dd>
  <dt>{{htmlattrdef("axis")}} {{deprecated_inline}}</dt>
  <dd>This attribute contains a list of space-separated strings. Each string is the <code>id</code> of a group of cells that this header applies to.
- <div class="note"><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard: use the {{htmlattrxref("scope", "th")}} attribute instead.</div>
+ <div class="note"><p><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard: use the {{htmlattrxref("scope", "th")}} attribute instead.</p></div>
  </dd>
  <dt>{{htmlattrdef("bgcolor")}} {{Non-standard_inline}}</dt>
  <dd>This attribute defines the background color of each cell in a column. It consists of a 6-digit hexadecimal code as defined in <a href="https://www.w3.org/Graphics/Color/sRGB">sRGB</a> and is prefixed by '#'. This attribute may be used with one of sixteen predefined color strings:
@@ -130,19 +130,19 @@ browser-compat: html.elements.th
      <li><code>aqua</code> = "#00FFFF"</li>
   </ul>
 
- <div class="note"><strong>Note:</strong> Do not use this attribute, as it is non-standard and only implemented in some versions of Microsoft Internet Explorer: The {{HTMLElement("th")}} element should be styled using <a href="/en-US/docs/Web/CSS">CSS</a>. To create a similar effect use the {{cssxref("background-color")}} property in <a href="/en-US/docs/Web/CSS">CSS</a> instead.</div>
+ <div class="note"><p><strong>Note:</strong> Do not use this attribute, as it is non-standard and only implemented in some versions of Microsoft Internet Explorer: The {{HTMLElement("th")}} element should be styled using <a href="/en-US/docs/Web/CSS">CSS</a>. To create a similar effect use the {{cssxref("background-color")}} property in <a href="/en-US/docs/Web/CSS">CSS</a> instead.</p></div>
  </dd>
  <dt>{{htmlattrdef("char")}} {{deprecated_inline}}</dt>
  <dd>The content in the cell element is aligned to a character. Typical values include a period (.) to align numbers or monetary values. If {{htmlattrxref("align", "th")}} is not set to <code>char</code>, this attribute is ignored.
- <div class="note"><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard. To achieve the same effect, you can specify the character as the first value of the {{cssxref("text-align")}} property.</div>
+ <div class="note"><p><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard. To achieve the same effect, you can specify the character as the first value of the {{cssxref("text-align")}} property.</p></div>
  </dd>
  <dt>{{htmlattrdef("charoff")}} {{deprecated_inline}}</dt>
  <dd>This attribute is used to shift column data to the right of the character specified by the <strong>char</strong> attribute. Its value specifies the length of this shift.
- <div class="note"><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard.</div>
+ <div class="note"><p><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard.</p></div>
  </dd>
  <dt>{{htmlattrdef("height")}} {{deprecated_inline}}</dt>
  <dd>This attribute is used to define a recommended cell height.
- <div class="note"><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard: use the CSS {{cssxref("height")}} property instead.</div>
+ <div class="note"><p><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard: use the CSS {{cssxref("height")}} property instead.</p></div>
  </dd>
  <dt>{{htmlattrdef("valign")}} {{deprecated_inline}}</dt>
  <dd>This attribute specifies how a text is vertically aligned inside a cell. Possible values for this attribute are:
@@ -153,11 +153,11 @@ browser-compat: html.elements.th
   <li>and <code>top</code>: Positions the text near the top of the cell.</li>
  </ul>
 
- <div class="note"><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard: use the CSS {{cssxref("vertical-align")}} property instead.</div>
+ <div class="note"><p><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard: use the CSS {{cssxref("vertical-align")}} property instead.</p></div>
  </dd>
  <dt>{{htmlattrdef("width")}} {{deprecated_inline}}</dt>
  <dd>This attribute is used to define a recommended cell width. Additional space can be added with the {{domxref("HTMLTableElement.cellSpacing", "cellspacing")}} and {{domxref("HTMLTableElement.cellPadding", "cellpadding")}} properties and the width of the {{HTMLElement("col")}} element can also create extra width. But, if a column's width is too narrow to show a particular cell properly, it will be widened when displayed.
- <div class="note"><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard: use the CSS {{cssxref("width")}} property instead.</div>
+ <div class="note"><p><strong>Note:</strong> Do not use this attribute as it is obsolete in the latest standard: use the CSS {{cssxref("width")}} property instead.</p></div>
  </dd>
 </dl>
 
