Fix or remove cases of "HTML5 media"
Remove spec links in event summary tables, which are redundant with the
specification sections in the same pages.

Replace remaining "HTML5 media" with "HTML media".

--- a/files/en-us/web/guide/audio_and_video_delivery/cross_browser_video_player/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/cross_browser_video_player/index.html
@@ -102,7 +102,7 @@ tags:
 
 <h2 id="Using_the_Media_API">Using the Media API</h2>
 
-<p>HTML5 comes with a JavaScript <a href="/en-US/docs/Web/API/HTMLMediaElement">Media API</a> that allows developers access to and control of HTML5 media. This API will be used to make the custom control set defined above actually do something. In addition, the fullscreen button will use the <a href="/en-US/docs/Web/API/Fullscreen_API">Fullscreen API</a>, another W3C API that controls the ability of web browsers to show apps using your computer's full screen.</p>
+<p>HTML5 comes with a JavaScript <a href="/en-US/docs/Web/API/HTMLMediaElement">Media API</a> that allows developers access to and control of HTML media. This API will be used to make the custom control set defined above actually do something. In addition, the fullscreen button will use the <a href="/en-US/docs/Web/API/Fullscreen_API">Fullscreen API</a>, another W3C API that controls the ability of web browsers to show apps using your computer's full screen.</p>
 
 <h3 id="Setup">Setup</h3>
 
